sse-manifest/02-sse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sse-service
  namespace: maily
spec:
  selector:
    app: sse
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
